# Voice_agents

./: .dockerignore  .gitignore  Dockerfile  README.md  bot.py  local_bot.py  pyproject.toml
